--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,7 +30,7 @@
 						<p>Muro.Cash takes advantage of the Bitcoin Cash (BCH) Blockchain, which brings under one cent transaction fees. This allows payments of a few cents,
 							so the users can pay only for a little amount of pages, instead of having to spend many dolars in a subscription.</p>
 						<p>
-							Find out more about <a href="https://www.bitcoin.com/get-started/what-is-bitcoin-cash/">Bitcoin Cash (BCH)</a>.
+							Find out more about <a href="https://www.bitcoin.com/get-started/what-is-bitcoin-cash/">Bitcoin Cash (BCH)</a>
 						</p>
 				</ul>
 		</ul>
