Fix some typos in components.html

--- a/WebContent/components.html
+++ b/WebContent/components.html
@@ -20,7 +20,7 @@
 				</p>
 			<li><h2 id="cashid4spring">cashid4spring</h2>
 				<p>CashId Authentication for Spring Security.
-				<p>It uses the <a href="#repeson4bchn">repeson5bchn</a> component to process the authentication requests.</p>
+				<p>It uses the <a href="#repeson4bchn">repeson4bchn</a> component to process authentication requests.</p>
 			<li><h2 id="murocash">Muro.Cash</h2>
 				<p>The main component.
 				<p>It includes the classes that make it possible to build a Paywall by just defining some properties and by annotating methods.</p>
