--- a/WebContent/components.html
+++ b/WebContent/components.html
@@ -20,7 +20,7 @@
 				<p>The main component.
 				<p>It includes the classes that make it possible to build a Paywall by just defining some properties and by annotating methods.</p>
 			<li><h2 id="webextension">Web Extension</h2>
-				<p>A Web Extension that works as an CashId authentication provider, and as a Wallet with which contents can be bought.
+				<p>A Web Extension that works as a CashId authentication provider, and as a Wallet with which contents can be bought.
 				<p>At the moment, Muro.Cash uses Bitcoin.com's <a href="https://badger.bitcoin.com/">Badger Wallet</a>.</p>
 		</ul>
 	</article>
