--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -23,7 +23,7 @@
 						<p>Users do not need to give any personal data, like e-mail addresses, phone numbers or their full names, when they pay for the content.</p>
 					<li><h3>Micropayments</h3>
 						<p>Muro.Cash takes advantage of the Bitcoin Cash (BCH) Blockchain, which brings under one cent transaction fees. This allows payments of a few cents,
-							so the users can pay only for a little amount of pages, instead of having to spend many dolars in a subscription.</p>
+							so the users can pay only for a little amount of pages, instead of having to spend many dollars in a subscription.</p>
 						<p>
 							Find out more about <a href="https://www.bitcoin.com/get-started/what-is-bitcoin-cash/">Bitcoin Cash (BCH)</a>
 						</p>
